--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- First Container -->
     <div class="container-fluid bg-1 text-center">
         <!--<h1 class="margin">Name</h1>-->
-        <img src="img/avatar.png" class="img-fluid" alt="Logo" id="logo">
+        <img src="img/Screenshot 2024-09-29 4.07.26 PM.png" class="img-fluid" alt="Logo" id="logo">
     </div>
 
     <!-- Second Container -->
@@ -76,13 +76,13 @@
         <h3 class="margin">About Me</h3><br>
         <div class="row">
             <div class="col-sm-4">
-                <p>Lorem ipsum.</p>
+                <p> i love the color pink.</p>
             </div>
             <div class="col-sm-4">
-                <p>Lorem ipsum.</p>
+                <p> pompompurin is my favorite character.</p>
             </div>
             <div class="col-sm-4">
-                <p>Lorem ipsum.</p>
+                <p> i love music.</p>
             </div>
         </div>
     </div>
